# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

botinfodir=$(pkgdatadir)/data1/botinfo

nobase_dist_botinfo_DATA = \
	^1Diablo.cfg \
	^1Mina.cfg \
	^3Marty.cfg \
	^3Mephisto.cfg \
	^3Shploik!.cfg \
	^4Invad^6ur.cfg \
	^5Beavis.cfg \
	^6Baal.cfg \
	^7Ruh^4Lur.cfg \
	^7The^1Zapp.cfg \
	Astral.cfg \
	Beavis.cfg \
	Butthead.cfg \
	Cyborg.cfg \
	Destoroyah.cfg \
	Fafa.cfg \
	Gamara.cfg \
	Ghidora.cfg \
	Hedorah.cfg \
	Johnny.cfg \
	Mogera.cfg \
	Mothra.cfg \
	Squirtney.cfg \
	Stryker.cfg \
	Yoz.cfg \
	sample.cfg \
	allbots.tmp \
	team.tmp \
	dm-annihilation.tmp \
	dm-babel.tmp \
	dm-bloodfactory.tmp \
	dm-crucible.tmp \
	dm-deathray.tmp \
	dm-dismal.tmp \
	dm-dynamo.tmp \
	dm-extermination.tmp \
	dm-gauntlet.tmp \
	dm-leviathan.tmp \
	dm-neptune.tmp \
	dm-purgatory.tmp \
	dm-turbo.tmp \
	dm-violator.tmp \
	dm-wasteland.tmp \
	tac-extermination.tmp \
	tac-impact.tmp \
	nav/ctf-abyss.nod \
	nav/ctf-cryogenic.nod \
	nav/ctf-dynasty.nod \
	nav/ctf-extermination.nod \
	nav/ctf-frost.nod \
	nav/ctf-terminal.nod \
	nav/ctf-violator.nod \
	nav/ctf-zion.nod \
	nav/dm-annihilation.nod \
	nav/dm-babel.nod \
	nav/dm-bloodfactory.nod \
	nav/dm-crucible.nod \
	nav/dm-deathray.nod \
	nav/dm-dismal.nod \
	nav/dm-dynamo.nod \
	nav/dm-extermination.nod \
	nav/dm-gauntlet.nod \
	nav/dm-leviathan.nod \
	nav/dm-neptune.nod \
	nav/dm-purgatory.nod \
	nav/dm-turbo.nod \
	nav/dm-violator.nod \
	nav/dm-wasteland.nod \
	nav/tac-extermination.nod \
	nav/tac-impact.nod 
