# Process this file with automake to produce Makefile.in

# Copyright (C) 2013 COR Entertainment, LLC.

envdir=$(pkgdatadir)/data1/env

nobase_dist_env_DATA = \
	blueseabk.jpg \
	blueseadn.jpg \
	blueseaft.jpg \
	bluesealf.jpg \
	blueseart.jpg \
	blueseaup.jpg \
	desertbk.jpg \
	desertdn.jpg \
	desertft.jpg \
	desertlf.jpg \
	desertrt.jpg \
	desertup.jpg \
	halienbk.jpg \
	haliendn.jpg \
	halienft.jpg \
	halienlf.jpg \
	halienrt.jpg \
	halienup.jpg \
	hgreenbk.jpg \
	hgreendn.jpg \
	hgreenft.jpg \
	hgreenlf.jpg \
	hgreenrt.jpg \
	hgreenup.jpg \
	hhellbk.jpg \
	hhelldn.jpg \
	hhellft.jpg \
	hhelllf.jpg \
	hhellrt.jpg \
	hhellup.jpg \
	hmartianbk.jpg \
	hmartiandn.jpg \
	hmartianft.jpg \
	hmartianlf.jpg \
	hmartianrt.jpg \
	hmartianup.jpg \
	hmountbk.jpg \
	hmountdn.jpg \
	hmountft.jpg \
	hmountlf.jpg \
	hmountrt.jpg \
	hmountup.jpg \
	hspacebk.jpg \
	hspacedn.jpg \
	hspaceft.jpg \
	hspacelf.jpg \
	hspacert.jpg \
	hspaceup.jpg
